--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "webpack": "^4.41.2"
   },
   "devDependencies": {
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0",
     "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "build": "webpack",
-    "dev":"webpack-dev-server"
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
