--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "^4.41.2"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
