--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "从零开始搭建webpack",
   "main": "webpack.config.js",
   "dependencies": {
-    "webpack-cli": "^3.3.9",
-    "webpack": "^4.41.2"
+    "jquery": "^3.4.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
