--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
